Fix button text wrapping on small screens.

--- a/wp-content/themes/unity-2017/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/unity-2017/resources/assets/styles/components/_buttons.scss
@@ -2,6 +2,7 @@
   font-weight: bold;
   transform: all 0.3s ease;
   color: $color-black;
+  white-space: nowrap;
 
   &::before {
     display: none;
