--- a/wp-content/themes/unity-2017/resources/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/unity-2017/resources/assets/styles/layouts/_posts.scss
@@ -133,8 +133,12 @@
 
     header {
       width: 100%;
-      padding: 0 25%;
+      padding: 0 20%;
       z-index: 5;
+
+      @media #{$medium-and-up} {
+        padding: 0 25%;
+      }
     }
 
     time, .entry-title, .byline {
